#0 屏蔽pycharm工程文件

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ Temporary Items
 # python
 # =========================
 *.pyc
+
+# =========================
+# pycharm
+# =========================
+.idea
