#0 vscode_workspace自动过滤工具提交

--- a/tool/vscode_workspace_auto_exclude/conf/conf.conf
+++ b/tool/vscode_workspace_auto_exclude/conf/conf.conf
@@ -1,6 +1,6 @@
 [common]
 VSCodeWorkspacePath = E:\project\dm109\py3_2019\trunk\Project.code-workspace
-ExtList = .json,.cs,.py
-ExcludeList = **/.vscode,**/.idea,**/__pycache__
+ExtList = .json,.cs,.py,.shader,.hlsl,.csproj
+ExcludeList = **/.vscode,**/.idea,**/__pycache__,**/.vs
 
 
