#0 vscode_auto_exclude 1、自动排除

--- a/tool/vscode_workspace_auto_exclude/conf/conf.conf
+++ b/tool/vscode_workspace_auto_exclude/conf/conf.conf
@@ -1,6 +1,6 @@
 [common]
 VSCodeWorkspacePath = E:\project\YY25\YY25Android\Project.code-workspace
-ExtList = .json,.cs,.py,.shader,.hlsl,.csproj,.conf
+ExtList = .json,.cs,.py,.shader,.hlsl,.csproj,.conf,.md,.MD
 ExcludeList = **/.vscode,**/.idea,**/__pycache__,**/.vs
 
 
