#0 typora markdown 转 km的markdown 1、添加profile工具

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ Temporary Items
 # python
 # =========================
 *.pyc
+*.prof
 
 # =========================
 # pycharm
@@ -61,3 +62,6 @@ Temporary Items
 
 build/
 /tool/vscode_workspace_auto_exclude/log/logging.log
+
+
+
