--- a/tool/typora_md_to_km/conf/log.conf
+++ b/tool/typora_md_to_km/conf/log.conf
@@ -8,11 +8,11 @@ keys=fileHandler,consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=fileHandler
 
 [logger_myLog]
-level=INFO
+level=DEBUG
 handlers=fileHandler, consoleHandler
 qualname=myLog
 propagate=0
@@ -20,7 +20,7 @@ propagate=0
 [handler_consoleHandler]
 class=StreamHandler
 args=(sys.stdout,)
-level=INFO
+level=DEBUG
 formatter=simpleFormatter
 
 [handler_fileHandler]
