#5 邮件系统、定时器系统 1、邮件系统通知 2、定时器任务

--- a/template/conf/log.conf
+++ b/template/conf/log.conf
@@ -8,8 +8,8 @@ keys=fileHandler,consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=DEBUG
-handlers=fileHandler
+level=ERROR
+handlers=fileHandler,consoleHandler
 
 [logger_myLog]
 level=DEBUG
@@ -25,7 +25,7 @@ formatter=simpleFormatter
 
 [handler_fileHandler]
 class=FileHandler
-args=('log/logging.log', 'w')
+args=('log/logging.log', 'w', 'utf-8')
 level=DEBUG
 formatter=simpleFormatter
 
