#8 通知系统 1、通知配置到json文件中，在初始化的时候加载

--- a/template/config/config_template.conf
+++ b/template/config/config_template.conf
@@ -5,3 +5,6 @@ cwd = {{CWD}}
 user = {{mail_user}}
 password = {{mail_password}}
 host = {{mail_host}}
+
+[scheduler]
+path =  {{CWD}}/config/scheduler.json
