#8 通知系统 1、通配置文件，配置邮件发送者和邮件接收者。

--- a/template/config/config_template.conf
+++ b/template/config/config_template.conf
@@ -5,6 +5,7 @@ cwd = {{CWD}}
 user = {{mail_user}}
 password = {{mail_password}}
 host = {{mail_host}}
+to = {{mail_to}}
 
 [scheduler]
 path =  {{CWD}}/config/scheduler.json
