#15 支持钉钉发送消息

--- a/template/config/config_template.conf
+++ b/template/config/config_template.conf
@@ -7,3 +7,9 @@ user = {{mail_user}}
 password = {{mail_password}}
 host = {{mail_host}}
 to = {{mail_to}}
+
+[dingding]
+webhook = {{dingding_webhook}}
+secret = {{dingding_secret}}
+keyword = {{dingding_keyword}}
+to = {{dingding_to}}
