--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ config.conf
 
 /tool/merge_monthly_report/data/src
 /tool/merge_monthly_report/data/xx月贡献评分.xlsx
+/tool/merge_monthly_report/data/dest
