#22 工具 1、exe发布命令

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ config.conf
 /tool/merge_monthly_report/data/src
 /tool/merge_monthly_report/data/xx月贡献评分.xlsx
 /tool/merge_monthly_report/data/dest
+/tool/merge_monthly_report/binexe/main.exe
+/template/binexe/main.exe
