--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# =========================
+﻿# =========================
 # Operating System Files
 # =========================
 # ============ windows
@@ -64,9 +64,10 @@ build/
 /tool/vscode_workspace_auto_exclude/log/logging.log
 render.yml
 config.conf
-
 /tool/merge_monthly_report/data/src
 /tool/merge_monthly_report/data/xx月贡献评分.xlsx
 /tool/merge_monthly_report/data/dest
 /tool/merge_monthly_report/binexe/main.exe
 /template/binexe/main.exe
+
+/tool/mul_lan_snippets/output
