#32 修复通知bug 1、log配置问题，root log的级别太高，导致一些warning报错没有看到，不方便调试 2、job触发，偏差一小时内都允许触发，避免遗漏通知

--- a/template/config/log.conf
+++ b/template/config/log.conf
@@ -8,7 +8,7 @@ keys=fileHandler,consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=ERROR
+level=DEBUG
 handlers=fileHandler,consoleHandler
 
 [logger_myLog]
