--- a/template/config/config_template.conf
+++ b/template/config/config_template.conf
@@ -13,3 +13,7 @@ webhook = {{dingding_webhook}}
 secret = {{dingding_secret}}
 keyword = {{dingding_keyword}}
 to = {{dingding_to}}
+
+[net]
+ip = {{net_ip}
+port = {{net_port}}
