#39 新增webbrowser plugins 1、调整新开网页默认界面

--- a/tool/web_browser_plugins/manifest.json
+++ b/tool/web_browser_plugins/manifest.json
@@ -10,7 +10,8 @@
         "storage",
         "activeTab",
         "scripting",
-        "tabs"
+        "tabs",
+        "webRequest"
     ],
     "action": {
         "default_popup": "popup.html",
@@ -31,5 +32,14 @@
     "chrome_url_overrides":
     {
         "newtab": "newtab.html"
-    }
+    },
+    "content_scripts":[
+        {
+            "matches":["<all_urls>"],
+            "js":["at_start.js", "leave_warning.js"],
+            "css": [],
+            "run_at": "document_start"
+        }
+    ],
+    "devtools_page": "devtools.html"
 }
